--- a/programming/language/python/python-guidata/pspec.xml
+++ b/programming/language/python/python-guidata/pspec.xml
@@ -12,10 +12,10 @@
         <IsA>library</IsA>
         <Summary>a Python library generating graphical user interfaces</Summary>
         <Description>Based on the Qt Python binding module PyQt4, guidata is a Python library generating graphical user interfaces for easy dataset editing and display. It also provides helpers and application development tools for PyQt4.</Description>
-        <Archive sha1sum="62f6de8423f0fc925461a5151d17c3bb626b5234" type="zip">http://guidata.googlecode.com/files/guidata-1.3.0.zip</Archive>
+        <Archive sha1sum="75d5d6c8d50553727fcc807cca86c2a3f92f824a" type="zip">http://guidata.googlecode.com/files/guidata-1.5.1.zip</Archive>
         <BuildDependencies>
             <Dependency>python-qt</Dependency>
-            <Dependency releaseFrom="13">qscintilla2-python</Dependency>
+            <Dependency releaseFrom="16">qscintilla2-python</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -23,7 +23,7 @@
         <Name>python-guidata</Name>
         <RuntimeDependencies>
             <Dependency>python-qt</Dependency>
-            <Dependency releaseFrom="13">qscintilla2-python</Dependency>
+            <Dependency releaseFrom="16">qscintilla2-python</Dependency>
             <Dependency>python-h5py</Dependency>
             <Dependency>python-numpy</Dependency>
         </RuntimeDependencies>
@@ -35,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-12</Date>
+            <Version>1.5.1</Version>
+            <Comment>Version bump to latest stable release.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2011-04-06</Date>
             <Version>1.3.0</Version>
