--- a/programming/language/python/python-guiqwt/pspec.xml
+++ b/programming/language/python/python-guiqwt/pspec.xml
@@ -12,12 +12,12 @@
         <IsA>library</IsA>
         <Summary>a Python library providing efficient 2D data-plotting  features</Summary>
         <Description>Based on PyQwt and on the scientific modules NumPy and SciPy, guiqwt is a Python library providing efficient 2D data-plotting features for interactive computing and signal/image processing application development.</Description>
-        <Archive sha1sum="a94325637114ea485fd942bc11ea23fef847867a" type="zip">http://guiqwt.googlecode.com/files/guiqwt-2.1.1.zip</Archive>
+        <Archive sha1sum="a94325637114ea485fd942bc11ea23fef847867a" type="zip">https://guiqwt.googlecode.com/files/guiqwt-2.2.1.zip</Archive>
         <BuildDependencies>
             <Dependency>python-qt</Dependency>
             <Dependency>python-qwt</Dependency>
             <Dependency>python-numpy</Dependency>
-            <Dependency versionFrom="1.3.0">python-guidata</Dependency>
+            <Dependency versionFrom="1.5.1">python-guidata</Dependency>
             <Dependency>python-imaging</Dependency>
             <Dependency>python-sphinx</Dependency>
         </BuildDependencies>
@@ -31,7 +31,7 @@
             <Dependency>python-numpy</Dependency>
             <Dependency>python-scipy</Dependency>
             <Dependency>python-imaging</Dependency>
-            <Dependency versionFrom="1.3.0">python-guidata</Dependency>
+            <Dependency versionFrom="1.5.1">python-guidata</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -41,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-12</Date>
+            <Version>2.1.1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2011-04-21</Date>
             <Version>2.1.1</Version>
