--- a/programming/language/python/python-icu/pspec.xml
+++ b/programming/language/python/python-icu/pspec.xml
@@ -12,16 +12,16 @@
         <IsA>library</IsA>
         <Summary>A Python extension wrapping IBM's ICU C++ API</Summary>
         <Description>PyICU is a Python extension wrapping IBM's International Components for Unicode C++ library (ICU)</Description>
-        <Archive sha1sum="67edd409ea65c2a00f847178d2b8fc4b4d1fe1ea" type="targz">http://pypi.python.org/packages/source/P/PyICU/PyICU-1.0.1.tar.gz</Archive>
+        <Archive sha1sum="70ea51543d5e684b1466d3cf6d3c7a6ee115ed4e" type="targz">http://pypi.python.org/packages/source/P/PyICU/PyICU-1.4.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.4">icu4c-devel</Dependency>
+            <Dependency versionFrom="5.1">icu4c-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-icu</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="4.4">icu4c</Dependency>
+            <Dependency versionFrom="5.1">icu4c</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-11-12</Date>
+            <Version>1.4</Version>
+            <Comment>Version Bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-11-05</Date>
             <Version>1.0.1</Version>
