--- a/desktop/kde/l10n/kde-l10n-ar/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ar/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:ar</IsA>
         <Summary>Arabic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ar is the KDE4 internationalization package that provides Arabic translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="17f51a6b2b54b4f53e26d6ffc0350d699f03f859">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-ar-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="da5cd78b18d736becee1b74c721d50350a128aed">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-ar-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="31">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="30">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
