--- a/desktop/kde/l10n/kde-l10n-bs/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-bs/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:bs</IsA>
         <Summary>Bosnian KDE4 internationalization package</Summary>
         <Description>kde-l10n-bs is the KDE4 internationalization package that provides Bosnian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="d8fe9555d0bdd015ae62d7314e0a041d67f0c874">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-bs-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="46db0ebdc2a49b106c58dba86f441722c7f70a18">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-bs-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -25,17 +25,14 @@
         </Files>
     </Package>
 
-    <Package>
-        <Name>kde-l10n-bs-doc</Name>
-        <Summary>Bosnian documentation files for KDE</Summary>
-        <Files>
-            <Path fileType="data">/usr/share/kde4</Path>
-            <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="doc">/usr/share/doc</Path>
-        </Files>
-    </Package>
-
     <History>
+        <Update release="9">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
          <Update release="8">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
