--- a/programming/language/python/python-httplib2/pspec.xml
+++ b/programming/language/python/python-httplib2/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A comprehensive HTTP client library in Python</Summary>
         <Description>httplib2 is a comprehensive HTTP client library that supports many features left out of other HTTP libraries.</Description>
-        <Archive sha1sum="4ad095cb3d65ddded5381dc4edc4078f908d7885" type="targz">http://httplib2.googlecode.com/files/httplib2-0.7.6.tar.gz</Archive>
+        <Archive sha1sum="6c5b748676518e1162a10f1c3c63ca960a30a7a0" type="targz">http://httplib2.googlecode.com/files/httplib2-0.7.7.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2012-11-17</Date>
+            <Version>0.7.7</Version>
+            <Comment>Güncellendi.</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
        <Update release="7">
             <Date>2012-11-12</Date>
             <Version>0.7.6</Version>
