--- a/programming/language/python/python-edje/pspec.xml
+++ b/programming/language/python/python-edje/pspec.xml
@@ -12,16 +12,16 @@
         <IsA>library</IsA>
         <Summary>Edje Python binding</Summary>
         <Description>python-edje is the Python binding of Edje layout library.</Description>
-        <Archive sha1sum="2a678af9c30d996a3ce0301e735de748b5dda69b" type="targz">https://github.com/circass/pisi-work/raw/master/e17-source/py-bind/python-edje.tar.gz</Archive>
+        <Archive sha1sum="62427539fa53ac2bc7c9bb5440268b99c0483c1d" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-edje-1.7.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency versionFrom="1.7.0">eina-devel</Dependency>
             <Dependency versionFrom="1.7.0">eet-devel</Dependency>
             <Dependency versionFrom="1.7.0">ecore-devel</Dependency>
-            <Dependency versionFrom="1.7.99">evas-devel</Dependency>
+            <Dependency versionFrom="1.7.0">evas-devel</Dependency>
             <Dependency versionFrom="1.7.0">edje-devel</Dependency>
             <Dependency versionFrom="1.7.0">embryo-devel</Dependency>
             <Dependency versionFrom="1.7.0">python-evas-devel</Dependency>
-	    <Dependency versionFrom="1.7.0">python-ecore-devel</Dependency>
+            <Dependency versionFrom="1.7.0">python-ecore-devel</Dependency>
             <Dependency versionFrom="1.7.0">python-e_dbus</Dependency>
         </BuildDependencies>
     </Source>
@@ -32,11 +32,11 @@
             <Dependency versionFrom="1.7.0">eina-devel</Dependency>
             <Dependency versionFrom="1.7.0">eet-devel</Dependency>
             <Dependency versionFrom="1.7.0">ecore-devel</Dependency>
-            <Dependency versionFrom="1.7.99">evas-devel</Dependency>
+            <Dependency versionFrom="1.7.00">evas-devel</Dependency>
             <Dependency versionFrom="1.7.0">edje-devel</Dependency>
             <Dependency versionFrom="1.7.0">embryo-devel</Dependency>
             <Dependency versionFrom="1.7.0">python-evas-devel</Dependency>
-	    <Dependency versionFrom="1.7.0">python-ecore-devel</Dependency>
+            <Dependency versionFrom="1.7.0">python-ecore-devel</Dependency>
             <Dependency versionFrom="1.7.0">python-e_dbus</Dependency>
         </RuntimeDependencies>
         <Files>
