--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -70,6 +70,8 @@
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/opt/sun-jdk/bin</Path>
+            <Path fileType="executable">/usr/bin/javah</Path>
+            <Path fileType="executable">/usr/bin/jar</Path>
             <Path fileType="header">/opt/sun-jdk/include</Path>
             <Path fileType="library">/opt/sun-jdk/lib</Path>
             <Path fileType="data">/opt/sun-jdk/db</Path>
@@ -123,6 +125,13 @@
 -->
 
     <History>
+        <Update release="38">
+            <Date>2012-12-30</Date>
+            <Version>1.7_p9</Version>
+            <Comment>create symlink</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="37">
             <Date>2012-11-01</Date>
             <Version>1.7_p9</Version>
