--- a/programming/language/python/pyqtermwidget/pspec.xml
+++ b/programming/language/python/pyqtermwidget/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python binding of terminal widget for Qt</Summary>
         <Description>A simple terminal widget for using with PyQt based applications</Description>
-        <Archive sha1sum="f3140d7d3b398474a480288af6882addd4cf15ba" type="tarbz2">http://cekirdek.pardus.org.tr/~gokmen/files/qtermwidget-0.2.0.tar.bz2</Archive>
+        <Archive sha1sum="682183e655248c59d2eb75843d989e6c1dca01d2" type="targz">http://anka.pardus-linux.org/2013/source/qtermwidget-pyqt-fixes.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.6.2">qt-devel</Dependency>
             <Dependency versionFrom="4.8.3">python-qt-devel</Dependency>
@@ -20,7 +20,8 @@
             <Dependency versionFrom="0.2.0">qtermwidget-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch>addStartShell.patch</Patch>
+            <Patch level="1">colorscheme-workaround.patch</Patch>
+            <!--Patch>addStartShell.patch</Patch-->
         </Patches>
     </Source>
 
@@ -41,6 +42,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2012-12-30</Date>
+            <Version>0.2.0</Version>
+            <Comment>Workaround for colorschemes, we need it for pardusman.</Comment>
+            <Name>Serdar Soytetir</Name>
+            <Email>tulliana@gmail.com</Email>
+        </Update>
         <Update release="7">
             <Date>2011-05-04</Date>
             <Version>0.2.0</Version>
