--- a/programming/language/perl/perl-Date-Manip/pspec.xml
+++ b/programming/language/perl/perl-Date-Manip/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Date manipulation routines</Summary>
         <Description>Date::Manip is a set of routines designed to make any common date/time manipulation easy to do.</Description>
-        <Archive sha1sum="3656592389dbfba0e8d928d1d8885cb086e35973" type="targz">http://search.cpan.org/CPAN/authors/id/S/SB/SBECK/Date-Manip-6.36.tar.gz</Archive>
+        <Archive sha1sum="79ac425a4974b7fa1d6b904bb38d5388c9088763" type="targz">http://fossies.org/unix/privat/Date-Manip-6.37.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.16.1">perl</Dependency>
             <Dependency>perl-YAML-Syck</Dependency>
@@ -34,6 +34,13 @@
     </Package>
 
     <History>
+        <Update release="12">
+            <Date>2012-12-30</Date>
+            <Version>6.37</Version>
+            <Comment>bump</Comment>
+            <Name>demiray muhterem</Name>
+            <Email>bilgi@bilgegunluk.com</Email>
+        </Update>
 	    <Update release="11">
             <Date>2012-11-14</Date>
             <Version>6.36</Version>
