--- a/programming/language/python/python-pygobject3/pspec.xml
+++ b/programming/language/python/python-pygobject3/pspec.xml
@@ -14,7 +14,7 @@
         <Description>pygobject is GLib's GObject library bindings for Python.</Description>
         <Archive sha1sum="abf695f16d36a36e72f713016a92eab0646d37a2" type="tarxz">http://ftp.gnome.org/pub/GNOME/sources/pygobject/3.4/pygobject-3.4.2.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency>cairo-devel</Dependency>
+            <Dependency>python-cairo-devel</Dependency>
             <Dependency versionFrom="1.34.0">gobject-introspection-devel</Dependency>
             <Dependency>libffi-devel</Dependency>
         </BuildDependencies>
@@ -23,7 +23,7 @@
     <Package>
         <Name>python-pygobject3</Name>
         <RuntimeDependencies>
-            <Dependency>cairo</Dependency>
+            <Dependency>python-cairo</Dependency>
             <Dependency versionFrom="1.34.0">gobject-introspection</Dependency>
             <Dependency>libffi</Dependency>
         </RuntimeDependencies>
@@ -49,6 +49,13 @@
     </Package>
 
     <History>
+        <Update release="12">
+            <Date>2013-01-09</Date>
+            <Version>3.4.2</Version>
+            <Comment>Dep +</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
         <Update release="1">
             <Date>2012-11-23</Date>
             <Version>3.4.2</Version>
