--- a/programming/language/python/python-v4l2capture/pspec.xml
+++ b/programming/language/python/python-v4l2capture/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Capture video with video4linux2</Summary>
         <Description>python-v4l2capture is a slim and easy to use Python extension for capturing video with video4linux2.</Description>
-        <Archive sha1sum="8a11a2228be3051a1b5925c3756e207553c0ffc2" type="targz">http://fredrik.jemla.eu/v4l2capture-1.3.tar.gz</Archive>
+        <Archive sha1sum="d1f0063318dd07bea28eeaded086e583df78ee1a" type="targz">http://ftp.hadiko.de/pub/dists/pypi/web/packages/source/v/v4l2capture/v4l2capture-1.4.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>libv4l-devel</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2013-01-12</Date>
+            <Version>1.4</Version>
+            <Comment>bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>1.3</Version>
