--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:tr</IsA>
         <Summary>Turkish KDE4 internationalization package</Summary>
         <Description>kde-l10n-tr is the KDE4 internationalization package that provides Turkish translations for KDE4 applications.</Description>
-        <Archive sha1sum="d592ec7ad21d71f85ecbf5a8e22d62c45745fb66" type="tarxz">mirrors://kde/unstable/4.9.95/src/kde-l10n/kde-l10n-tr-4.9.95.tar.xz</Archive>
+        <Archive sha1sum="a31088fd601d2bb1ca5dc078ad66c72f8833d645" type="tarxz">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-tr-4.9.97.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.9.95">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.97">kdelibs-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <!-- Include playground-network translations too -->
@@ -60,6 +60,13 @@
     </Package>
 
     <History>
+        <Update release="1">
+            <Date>2013-01-13</Date>
+            <Version>4.9.97</Version>
+            <Comment>Version bump to 4.9.97</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>      
         <Update release="1">
             <Date>2012-12-23</Date>
             <Version>4.9.95</Version>
