--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>Sun's Java Runtime Environment for Standard Edition</Summary>
         <Description>This package provides Java Runtime Environment that is necessary to run the programs written in Java.</Description>
-        <Archive sha1sum="06e0357207c18202f7fea04df5570de1845ddd28" type="binary">http://pakete.pardususer.de/source-files/dummy.zip</Archive>
+        <Archive sha1sum="f55d32167da7347151c18539712ed357c8d3e584" type="binary">http://anka.pardus-linux.org/2013/source/dummy.tar.gz</Archive>
         <AdditionalFiles>
 <!--            <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>-->
             <AdditionalFile permission="0644" target="i586.sha1">jdk-7u9-linux-i586.tar.gz.sha1sum</AdditionalFile>
